[metadata]
name = pypcp
url = https://github.com/uhayat/pypcp
project_urls =
    Source Code = https://github.com/uhayat/pypcp/
    Issue Tracker = https://github.com/uhayat/pypcp/issues/
license = PostgreSQL License
author = Umar Hayat
author_email = m.umarkiani@gmail.com
maintainer = Umar Hayat
maintainer_email = m.umarkiani@gmail.com
license_files = LICENSE
description = Pgpool-II Communication Protocol(PCP) library.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: PostgreSQL License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Database
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
include_package_data = false
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pcp_cli = pypcp.pcp_cli:main
